# DevOps3

./: Dockerfile  FuncA.cpp  FuncA.h  Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  configure~  deb.deb  httpserv.cpp  main.cpp  mainprogram  nginx.conf  scriptA.sh  scriptB.sh  test
.deps/: FuncA.Po  httpserv.Po  main.Po
.github/workflows/: ci.yml  deb.yml  maketarball.yml  multistage.yml  test.yml
autom4te.cache/: output.1  output.2  output.3  requests  traces.1  traces.2  traces.3
deb/DEBIAN/: control
debian/: changelog  control  files  rules
tests/: test_func.cpp
tests/.deps/: test_func.Po
